--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    var game;
    $(document).ready(function()
       {
-         game = new MapperGame($('#mapperCanvas'));
+         game = new MapperGame(document.getElementById("mapperCanvas"));
          game.initialize();
       }
    );
