Added control instructions.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 </head>
 
 <body>
-   <h1>Mapper</h1>
    <canvas id="mapperCanvas" width="600px" height="450px" style="border:1px solid black"></canvas>
+   <div>
+      Arrows or WASD move the spider.<br>
+      Left click places a fly and shows the best path.<br>
+      Right click places a wall.
+   </div>
 </body>
 
 </html>
