--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
             game = new MapperGame({mainCanvas: document.getElementById("mapperCanvas"),
                                    diagCostText: document.getElementById("diagonalCost"),
-                                   critPointOptCheck: document.getElementById("critPointOpt")
+                                   critPointOptCheck: document.getElementById("critPointOpt"),
+                                   motionCompText: document.getElementById("motionCompText"),
+                                   wallCost: document.getElementById("wallCostText")
                                   });
             game.initialize();
         };
@@ -35,9 +37,11 @@
         Left click places a fly and shows the best path.<br>
         Right click places a wall.
     </div>
-    <br><br>
+    <br>
     Diagonal Cost: <input id="diagonalCost" type="text" value="3.0"><br>
+    Wall Cost: <input id="wallCostText" type="text" value="3.0"><br>
     Critical Point Opt: <input id="critPointOpt" type="checkbox"><br>
+    Motion Compensation: <input id="motionCompText" type="text" value="3000"><br>
 
 </body>
 
