Added gradient color for search frontier

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </div>
     <br>
     Diagonal Cost: <input id="diagonalCost" type="text" value="3.0"><br>
-    Wall Cost: <input id="wallCostText" type="text" value="3.0"><br>
-    Critical Point Opt: <input id="critPointOpt" type="checkbox"><br>
-    Motion Compensation: <input id="motionCompText" type="text" value="3000"><br>
+    Wall Cost: <input id="wallCostText" type="text" value="3000"><br>
+    Critical Point Post-Processing: <input id="critPointOpt" type="checkbox"><br>
+    Motion Compensation: <input id="motionCompText" type="text" value="3.0"><br>
 
 </body>
 
