Added link to inspiring website

--- a/index.html
+++ b/index.html
@@ -59,9 +59,15 @@ intersections, so that Dijkstra's instead finds the fastest path between 2
 points.
 </p>
 <p>
-The brilliance of Dijkstra's algorithm is that the shortest path gets extended
-first, so as soon as the algorithm finds the end point, the shortest path is
-found.
+
+The brilliance of Dijkstra's algorithm is that the shortest path found so far
+gets extended first, so as soon as the algorithm finds the end point, the
+shortest path is known. If you want to know more about the algorithm and its
+implementation, check out
+
+<a href="http://www.redblobgames.com/pathfinding/a-star/introduction.html">
+this page which inspired this animation.</a>
+
 </p>
 <p>
 The spider is the starting point for Dijkstra's algorithm. Once a fly is
